--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "create-react-component-folder": "^0.3.7",
     "firebase": "^10.7.1",
     "normalize.css": "^8.0.1",
